test/infiniteType2.slq
// args: --inference-limit=5

def main(){
	x:=()⇒assert(0);
	while true{ // error
		x=()⇒x;
	}
}
